@@ -1,21 +1,19 @@
 package org.monarchinitiative.phenol.annotations.obo.uberpheno;
 
-import com.google.common.collect.ImmutableMap;
 import org.jgrapht.graph.DefaultDirectedGraph;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.monarchinitiative.phenol.graph.IdLabeledEdge;
 import org.monarchinitiative.phenol.io.OntologyLoader;
+import org.monarchinitiative.phenol.io.utils.CurieUtil;
 import org.monarchinitiative.phenol.io.utils.CurieUtilBuilder;
 import org.monarchinitiative.phenol.ontology.data.Ontology;
 import org.monarchinitiative.phenol.ontology.data.Relationship;
 import org.monarchinitiative.phenol.ontology.data.TermId;
-import org.prefixcommons.CurieUtil;
 
 import java.io.File;
 import java.io.IOException;
 import java.net.URL;
-import java.nio.file.Paths;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -38,7 +36,7 @@ public class UberphenoOboParserTest {
       throw new IOException("Could not find uber pheno at " + uberPhenoPath);
     }
     File uberPhenoFile = new File(uberphenoURL.getFile());
-    CurieUtil curieUtil = CurieUtilBuilder.withDefaultsAnd(ImmutableMap.of("UBERPHENO", "http://purl.obolibrary.org/obo/UBERPHENO_"));
+    CurieUtil curieUtil = CurieUtilBuilder.withDefaultsAnd(Map.of("UBERPHENO", "http://purl.obolibrary.org/obo/UBERPHENO_"));
     this.ontology = OntologyLoader.loadOntology(uberPhenoFile, curieUtil);
   }
 
@@ -50,7 +48,6 @@ public class UberphenoOboParserTest {
 
   @Test
   public void testGetAllFiveTerms() {
-    final DefaultDirectedGraph<TermId, IdLabeledEdge> graph = ontology.getGraph();
     assertEquals(5, ontology.countAllTerms());
   }
 
